--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "watch": "nodemon src/index.js",
+    "start": "node index.js",
+    "watch": "nodemon index.js",
     "seed": "node seeds/index.js"
   },
   "author": "",
