--- a/.env
+++ b/.env
@@ -1,17 +1,21 @@
-# Application
-APP_PORT=4000 # application port
-APP_PORT=3000 # application port
+Application
+PORT=3000 # application port
 
-# Database
+Database
 DB_DIALECT="mysql" # the database type
-DB_USER="root" # mysql username
-DB_PASSWORD="Sophiezoey12" # mysql password
-DB_DATABASE="cms" #the mysql database to be used
-DB_PORT=4306 # mysql port
-DB_PORT=3306 # mysql port
-DB_HOST=127.0.0.1 # mysql port
 
-# Session
+DB_USER="b449b1f0080a09" # mysql username
+
+DB_PASSWORD="23bcfab1" # mysql password
+
+DBDATABASE="heroku3d3598cf459b449" #the mysql database to be used
+
+DB_PORT=3306 # mysql port
+
+DB_HOST="us-cdbr-east-06.cleardb.net" # mysql port
+
+Session
 SESSION_SECRET="my little secret"
-#bcrypt
+
+bcrypt
 SALT_ROUNDS=10
