--- a/.env
+++ b/.env
@@ -1,21 +1,17 @@
-Application
+# Application
 PORT=3000 # application port
 
-Database
+# Database
 DB_DIALECT="mysql" # the database type
-
 DB_USER="b449b1f0080a09" # mysql username
-
 DB_PASSWORD="23bcfab1" # mysql password
-
-DBDATABASE="heroku3d3598cf459b449" #the mysql database to be used
-
+DB_DATABASE="heroku_3d3598cf459b449" #the mysql database to be used
 DB_PORT=3306 # mysql port
-
 DB_HOST="us-cdbr-east-06.cleardb.net" # mysql port
 
-Session
+# Session
 SESSION_SECRET="my little secret"
 
-bcrypt
+#bcrypt
 SALT_ROUNDS=10
+
