--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ PORT=3000 # application port
 
 # Database
 DB_DIALECT="mysql" # the database type
-DB_USER="b449b1f0080a09" # mysql username
-DB_PASSWORD="23bcfab1" # mysql password
-DB_DATABASE="heroku_3d3598cf459b449" #the mysql database to be used
+DB_USER="b3abddf9e09cde" # mysql username
+DB_PASSWORD="12bd1697" # mysql password
+DB_DATABASE="heroku_97f949f7a57c1d3" #the mysql database to be used
 DB_PORT=3306 # mysql port
 DB_HOST="us-cdbr-east-06.cleardb.net" # mysql port
 
